--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CAR CONNECT</title>
+    <title>JUGURUK</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -69,7 +69,7 @@
         <div class="position-relative px-lg-5" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-secondary navbar-dark py-3 py-lg-0 pl-3 pl-lg-5">
                 <a href="" class="navbar-brand">
-                    <h1 class="text-uppercase text-primary mb-1">Car Connect</h1>
+                    <h1 class="text-uppercase text-primary mb-1">JUGURUK</h1>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -173,7 +173,7 @@
 <!-- About Start -->
 <div class="container-fluid py-5">
     <div class="container pt-5 pb-3">
-        <h1 class="display-4 text-uppercase text-center mb-5">Welcome To <span class="text-primary">Car Connect</span></h1>
+        <h1 class="display-4 text-uppercase text-center mb-5">Welcome To <span class="text-primary">JUGURUK</span></h1>
         <div class="row justify-content-center">
             <div class="col-lg-10 text-center">
                 <img class="w-75 mb-4" th:src="@{/img/about.png}" alt="">
@@ -186,7 +186,7 @@
                     <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4" style="width: 100px; height: 100px;">
                         <i class="fa fa-2x fa-headset text-secondary"></i>
                     </div>
-                    <h4 class="text-uppercase m-0">24/7 Car Rental Support</h4>
+                    <h4 class="text-uppercase m-0">24/7 JUGURUK Support</h4>
                 </div>
             </div>
             <div class="col-lg-4 mb-2">
@@ -194,7 +194,7 @@
                     <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4" style="width: 100px; height: 100px;">
                         <i class="fa fa-2x fa-car text-secondary"></i>
                     </div>
-                    <h4 class="text-light text-uppercase m-0">Car Reservation Anytime</h4>
+                    <h4 class="text-light text-uppercase m-0">JUGURUK Reservation Anytime</h4>
                 </div>
             </div>
             <div class="col-lg-4 mb-2">
