--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -196,40 +196,6 @@
 <!-- Contact End -->
 
 
-<!-- Vendor Start -->
-<!--    <div class="container-fluid py-5">-->
-<!--        <div class="container py-5">-->
-<!--            <div class="owl-carousel vendor-carousel">-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-1.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-2.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-3.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-4.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-5.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-6.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-7.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-8.png}" alt="">-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!-- Vendor End -->
-
-
 <!-- Footer Start -->
 <div class="container-fluid bg-secondary py-5 px-sm-3 px-md-5" style="margin-top: 90px;">
     <div class="row pt-5">
@@ -240,10 +206,18 @@
             <p><i class="fa fa-envelope text-white mr-3"></i>info@example.com</p>
             <h6 class="text-uppercase text-white py-2">Follow Us</h6>
             <div class="d-flex justify-content-start">
-                <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-lg btn-dark btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-lg btn-dark btn-lg-square"
+                   href="https://wa.me/996776203384"
+                   target="_blank">
+                    <i class="fab fa-whatsapp"></i>
+                </a>
+
+                <a class="btn btn-lg btn-dark btn-lg-square"
+                   href="https://www.instagram.com/alym_kg/"
+                   target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
+
             </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
