--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -210,71 +210,6 @@
 </div>
 <!-- About End -->
 
-
-<!-- Banner Start -->
-<!--    <div class="container-fluid py-5">-->
-<!--        <div class="container py-5">-->
-<!--            <div class="row mx-0">-->
-<!--                <div class="col-lg-6 px-0">-->
-<!--                    <div class="px-5 bg-secondary d-flex align-items-center justify-content-between" style="height: 350px;">-->
-<!--                        <img class="img-fluid flex-shrink-0 ml-n5 w-50 mr-4" th:src="@{/img/banner-left.png}" alt="">-->
-<!--                        <div class="text-right">-->
-<!--                            <h3 class="text-uppercase text-light mb-3">Want to be driver?</h3>-->
-<!--                            <p class="mb-4">Lorem justo sit sit ipsum eos lorem kasd, kasd labore</p>-->
-<!--                            <a class="btn btn-primary py-2 px-4" href="">Start Now</a>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="col-lg-6 px-0">-->
-<!--                    <div class="px-5 bg-dark d-flex align-items-center justify-content-between" style="height: 350px;">-->
-<!--                        <div class="text-left">-->
-<!--                            <h3 class="text-uppercase text-light mb-3">Looking for a car?</h3>-->
-<!--                            <p class="mb-4">Lorem justo sit sit ipsum eos lorem kasd, kasd labore</p>-->
-<!--                            <a class="btn btn-primary py-2 px-4" href="">Start Now</a>-->
-<!--                        </div>-->
-<!--                        <img class="img-fluid flex-shrink-0 mr-n5 w-50 ml-4" th:src="@{/img/banner-right.png}" alt="">-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!-- Banner End -->
-
-
-<!-- Vendor Start -->
-<!--    <div class="container-fluid py-5">-->
-<!--        <div class="container py-5">-->
-<!--            <div class="owl-carousel vendor-carousel">-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-1.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-2.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-3.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-4.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-5.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-6.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-7.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-8.png}" alt="">-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!-- Vendor End -->
-
-
 <!-- Footer Start -->
 <div class="container-fluid bg-secondary py-5 px-sm-3 px-md-5" style="margin-top: 90px;">
     <div class="row pt-5">
@@ -285,10 +220,16 @@
             <p><i class="fa fa-envelope text-white mr-3"></i>info@example.com</p>
             <h6 class="text-uppercase text-white py-2">Follow Us</h6>
             <div class="d-flex justify-content-start">
-                <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-lg btn-dark btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-lg btn-dark btn-lg-square"
+                   href="https://wa.me/996776203384"
+                   target="_blank">
+                    <i class="fab fa-whatsapp"></i>
+                </a>
+                <a class="btn btn-lg btn-dark btn-lg-square"
+                   href="https://www.instagram.com/alym_kg/"
+                   target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
             </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
