--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -89,53 +89,6 @@
 <!-- Navbar End -->
 
 
-<!-- Search Start -->
-<div class="container-fluid bg-white pt-3 px-lg-5">
-    <!--        <div class="row mx-n2">-->
-    <!--            <div class="col-xl-2 col-lg-4 col-md-6 px-2">-->
-    <!--                <select class="custom-select px-4 mb-3" style="height: 50px;">-->
-    <!--                    <option selected>Pickup Location</option>-->
-    <!--                    <option value="1">Location 1</option>-->
-    <!--                    <option value="2">Location 2</option>-->
-    <!--                    <option value="3">Location 3</option>-->
-    <!--                </select>-->
-    <!--            </div>-->
-    <!--            <div class="col-xl-2 col-lg-4 col-md-6 px-2">-->
-    <!--                <select class="custom-select px-4 mb-3" style="height: 50px;">-->
-    <!--                    <option selected>Drop Location</option>-->
-    <!--                    <option value="1">Location 1</option>-->
-    <!--                    <option value="2">Location 2</option>-->
-    <!--                    <option value="3">Location 3</option>-->
-    <!--                </select>-->
-    <!--            </div>-->
-    <!--            <div class="col-xl-2 col-lg-4 col-md-6 px-2">-->
-    <!--                <div class="date mb-3" id="date" data-target-input="nearest">-->
-    <!--                    <input type="text" class="form-control p-4 datetimepicker-input" placeholder="Pickup Date"-->
-    <!--                        data-target="#date" data-toggle="datetimepicker" />-->
-    <!--                </div>-->
-    <!--            </div>-->
-    <!--            <div class="col-xl-2 col-lg-4 col-md-6 px-2">-->
-    <!--                <div class="time mb-3" id="time" data-target-input="nearest">-->
-    <!--                    <input type="text" class="form-control p-4 datetimepicker-input" placeholder="Pickup Time"-->
-    <!--                        data-target="#time" data-toggle="datetimepicker" />-->
-    <!--                </div>-->
-    <!--            </div>-->
-    <!--            <div class="col-xl-2 col-lg-4 col-md-6 px-2">-->
-    <!--                <select class="custom-select px-4 mb-3" style="height: 50px;">-->
-    <!--                    <option selected>Select A Car</option>-->
-    <!--                    <option value="1">Car 1</option>-->
-    <!--                    <option value="2">Car 1</option>-->
-    <!--                    <option value="3">Car 1</option>-->
-    <!--                </select>-->
-    <!--            </div>-->
-    <!--            <div class="col-xl-2 col-lg-4 col-md-6 px-2">-->
-    <!--                <button class="btn btn-primary btn-block mb-3" type="submit" style="height: 50px;">Search</button>-->
-    <!--            </div>-->
-    <!--        </div>-->
-</div>
-<!-- Search End -->
-
-
 <!-- Page Header Start -->
 <div class="container-fluid page-header">
     <h1 class="display-3 text-uppercase text-white mb-3">Contact</h1>
@@ -214,40 +167,6 @@
 <!-- Contact End -->
 
 
-<!-- Vendor Start -->
-<!--    <div class="container-fluid py-5">-->
-<!--        <div class="container py-5">-->
-<!--            <div class="owl-carousel vendor-carousel">-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-1.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-2.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-3.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-4.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-5.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-6.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-7.png}" alt="">-->
-<!--                </div>-->
-<!--                <div class="bg-light p-4">-->
-<!--                    <img th:src="@{/img/vendor-8.png}" alt="">-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!-- Vendor End -->
-
-
 <!-- Footer Start -->
 <div class="container-fluid bg-secondary py-5 px-sm-3 px-md-5" style="margin-top: 90px;">
     <div class="row pt-5">
@@ -258,10 +177,16 @@
             <p><i class="fa fa-envelope text-white mr-3"></i>info@example.com</p>
             <h6 class="text-uppercase text-white py-2">Follow Us</h6>
             <div class="d-flex justify-content-start">
-                <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-lg btn-dark btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-lg btn-dark btn-lg-square"
+                   href="https://wa.me/996776203384"
+                   target="_blank">
+                    <i class="fab fa-whatsapp"></i>
+                </a>
+                <a class="btn btn-lg btn-dark btn-lg-square"
+                   href="https://www.instagram.com/alym_kg/"
+                   target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
             </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
