--- a/src/main/resources/templates/jelmayan.html
+++ b/src/main/resources/templates/jelmayan.html
@@ -261,10 +261,16 @@
             <p><i class="fa fa-envelope text-white mr-3"></i>info@example.com</p>
             <h6 class="text-uppercase text-white py-2">Follow Us</h6>
             <div class="d-flex justify-content-start">
-                <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-lg btn-dark btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-lg btn-dark btn-lg-square"
+                   href="https://wa.me/996776203384"
+                   target="_blank">
+                    <i class="fab fa-whatsapp"></i>
+                </a>
+                <a class="btn btn-lg btn-dark btn-lg-square"
+                   href="https://www.instagram.com/alym_kg/"
+                   target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
             </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
