--- a/src/main/resources/templates/jelmayan.html
+++ b/src/main/resources/templates/jelmayan.html
@@ -83,6 +83,7 @@
                     <a href="/pages/about" class="nav-item nav-link">About</a>
                     <a href="/pages/jelmayan" class="nav-item nav-link">Jelmayan</a>
                     <a href="/pages/contact" class="nav-item nav-link">Contact</a>
+                    <a href="/pages/swagger" class="nav-item nav-link">API Docs</a>
                 </div>
             </div>
         </nav>
@@ -307,19 +308,6 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-uppercase text-light mb-4">Newsletter</h4>
-            <p class="mb-4">Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
-            <div class="w-100 mb-3">
-                <div class="input-group">
-                    <input type="text" class="form-control bg-dark border-dark" style="padding: 25px;" placeholder="Your Email">
-                    <div class="input-group-append">
-                        <button class="btn btn-primary text-uppercase px-3">Sign Up</button>
-                    </div>
-                </div>
-            </div>
-            <i>Lorem sit sed elitr sed kasd et</i>
-        </div>
     </div>
 </div>
 <div class="container-fluid bg-dark py-4 px-sm-3 px-md-5">
@@ -362,7 +350,7 @@
         const whatsappURL = `https://wa.me/${adminPhone}?text=${encodedMessage}`;
 
         // Открываем WhatsApp в новом окне
-        window.open(whatsappURL, '_blank');
+        wndow.open(whatsappURL, '_blank');
     }
 </script>
 </body>
