added whatsapp button

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -136,26 +136,17 @@
         <h1 class="display-4 text-uppercase text-center mb-5">КОНТАКТЫ</h1>
         <div class="row">
             <div class="col-lg-7 mb-2">
-                <div class="contact-form bg-light mb-4" style="padding: 30px;">
-                    <form>
-                        <div class="row">
-                            <div class="col-6 form-group">
-                                <input type="text" class="form-control p-4" placeholder="Your Name" required="required">
-                            </div>
-                            <div class="col-6 form-group">
-                                <input type="email" class="form-control p-4" placeholder="Your Email" required="required">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control p-4" placeholder="Subject" required="required">
-                        </div>
-                        <div class="form-group">
-                            <textarea class="form-control py-3 px-4" rows="5" placeholder="Message" required="required"></textarea>
-                        </div>
-                        <div>
-                            <button class="btn btn-primary py-3 px-5" type="submit">Send Message</button>
-                        </div>
-                    </form>
+                <div class="contact-form bg-light mb-4" style="padding: 30px;margin-top:120px;">
+                    <div class="contact-form bg-light mb-4" style="padding: 30px; text-align:center;">
+                        <a
+                                href="https://wa.me/996XXXXXXXXX"
+                                class="btn btn-success py-3 px-5"
+                                target="_blank"
+                        >
+                            Написать в WhatsApp
+                        </a>
+                    </div>
+
                 </div>
             </div>
             <div class="col-lg-5 mb-2">
