--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -42,21 +42,7 @@
         </div>
         <div class="col-md-6 text-center text-lg-right">
             <div class="d-inline-flex align-items-center">
-                <a class="text-body px-3" href="">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-                <a class="text-body px-3" href="">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a class="text-body px-3" href="">
-                    <i class="fab fa-linkedin-in"></i>
-                </a>
-                <a class="text-body px-3" href="">
-                    <i class="fab fa-instagram"></i>
-                </a>
-                <a class="text-body pl-3" href="">
-                    <i class="fab fa-youtube"></i>
-                </a>
+
             </div>
         </div>
     </div>
@@ -76,8 +62,8 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="/pages/home" class="nav-item nav-link">Home</a>
-                        <a href="/pages/about" class="nav-item nav-link">About</a>
+                        <a href="/pages/home" class="nav-item nav-link">Башкы бет</a>
+                        <a href="/pages/about" class="nav-item nav-link">Маалымат</a>
                         <a href="/pages/jelmayan" class="nav-item nav-link">Jelmayan</a>
 <!--                        <a href="/pages/service" class="nav-item nav-link">Service</a>-->
 <!--                        <div class="nav-item dropdown">-->
@@ -94,7 +80,7 @@
 <!--                                <a href="/pages/testimonial" class="dropdown-item">Testimonial</a>-->
 <!--                            </div>-->
 <!--                        </div>-->
-                        <a href="/pages/contact" class="nav-item nav-link">Contact</a>
+                        <a href="/pages/contact" class="nav-item nav-link">Контакт</a>
                     </div>
                     <!--                        <div class="nav-item dropdown">-->
                     <!--                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>-->
