--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,21 +42,6 @@
         </div>
         <div class="col-md-6 text-center text-lg-right">
             <div class="d-inline-flex align-items-center">
-                <a class="text-body px-3" href="">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-                <a class="text-body px-3" href="">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a class="text-body px-3" href="">
-                    <i class="fab fa-linkedin-in"></i>
-                </a>
-                <a class="text-body px-3" href="">
-                    <i class="fab fa-instagram"></i>
-                </a>
-                <a class="text-body pl-3" href="">
-                    <i class="fab fa-youtube"></i>
-                </a>
             </div>
         </div>
     </div>
@@ -76,10 +61,10 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="/pages/home" class="nav-item nav-link">Home</a>
-                        <a href="/pages/about" class="nav-item nav-link">About</a>
+                        <a href="/pages/home" class="nav-item nav-link">Башкы бет</a>
+                        <a href="/pages/about" class="nav-item nav-link">Маалымат</a>
                         <a href="/pages/jelmayan" class="nav-item nav-link">Jelmayan</a>
-                        <a href="/pages/contact" class="nav-item nav-link">Contact</a>
+                        <a href="/pages/contact" class="nav-item nav-link">Контакт</a>
                     </div>
                 </div>
         </nav>
@@ -129,7 +114,93 @@
 <!-- About End -->
 
 
+
+<!-- Services Start -->
+    <div class="container-fluid py-5">
+        <div class="container pt-5 pb-3">
+            <h1 class="display-1 text-primary text-center"></h1>
+            <h1 class="display-4 text-uppercase text-center mb-5">кызматтар</h1>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 mb-2">
+                    <div class="service-item d-flex flex-column justify-content-center px-4 mb-4">
+                        <div class="d-flex align-items-center justify-content-between mb-3">
+                            <div class="d-flex align-items-center justify-content-center bg-primary ml-n4" style="width: 80px; height: 80px;">
+                                <i class="fa fa-2x fa-taxi text-secondary"></i>
+                            </div>
+                            <h1 class="display-2 text-white mt-n2 m-0">01</h1>
+                        </div>
+                        <h4 class="text-uppercase mb-3">Жаңы мини-лабо</h4>
+                        <p class="m-0">Жеңил, үнөмдүү жана күчтүү мини-лаболор — чакан бизнес үчүн эң мыкты чечим. Ишти тездетип, чыгымды азайтыңыз!</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-2">
+                    <div class="service-item active d-flex flex-column justify-content-center px-4 mb-4">
+                        <div class="d-flex align-items-center justify-content-between mb-3">
+                            <div class="d-flex align-items-center justify-content-center bg-primary ml-n4" style="width: 80px; height: 80px;">
+                                <i class="fa fa-2x fa-money-check-alt text-secondary"></i>
+                            </div>
+                            <h1 class="display-2 text-white mt-n2 m-0">02</h1>
+                        </div>
+                        <h4 class="text-uppercase mb-3">Car Financing</h4>
+                        <p class="m-0">Kasd dolor no lorem nonumy sit labore tempor at justo rebum rebum stet, justo elitr dolor amet sit sea sed</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-2">
+                    <div class="service-item d-flex flex-column justify-content-center px-4 mb-4">
+                        <div class="d-flex align-items-center justify-content-between mb-3">
+                            <div class="d-flex align-items-center justify-content-center bg-primary ml-n4" style="width: 80px; height: 80px;">
+                                <i class="fa fa-2x fa-car text-secondary"></i>
+                            </div>
+                            <h1 class="display-2 text-white mt-n2 m-0">03</h1>
+                        </div>
+                        <h4 class="text-uppercase mb-3">Кардарга ылайык атайын заказ</h4>
+                        <p class="m-0">Сиз каалаган модель, түс же комплект — баарын өзүңүз тандаңыз. Биз мини-унааны так сиздин талапка жараша даярдап, тез арада даяр кылып беребиз</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-2">
+                    <div class="service-item d-flex flex-column justify-content-center px-4 mb-4">
+                        <div class="d-flex align-items-center justify-content-between mb-3">
+                            <div class="d-flex align-items-center justify-content-center bg-primary ml-n4" style="width: 80px; height: 80px;">
+                                <i class="fa fa-2x fa-cogs text-secondary"></i>
+                            </div>
+                            <h1 class="display-2 text-white mt-n2 m-0">04</h1>
+                        </div>
+                        <h4 class="text-uppercase mb-3">Документтерди расмийдөөгө жардам</h4>
+                        <p class="m-0">Сатып алуу келишими, техпаспорт жана башка керектүү документтерди тез жана көйгөйсүз даярдап беребиз.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-2">
+                    <div class="service-item d-flex flex-column justify-content-center px-4 mb-4">
+                        <div class="d-flex align-items-center justify-content-between mb-3">
+                            <div class="d-flex align-items-center justify-content-center bg-primary ml-n4" style="width: 80px; height: 80px;">
+                                <i class="fa fa-2x fa-spray-can text-secondary"></i>
+                            </div>
+                            <h1 class="display-2 text-white mt-n2 m-0">05</h1>
+                        </div>
+                        <h4 class="text-uppercase mb-3"> Техникалык кароо жана сервистик кызматтар</h4>
+                        <p class="m-0">Май алмаштыруу, диагностика, майда-чүйдө оңдоолор — гарантиядан кийин да унааңызга толук кам көрөбүз.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-2">
+                    <div class="service-item d-flex flex-column justify-content-center px-4 mb-4">
+                        <div class="d-flex align-items-center justify-content-between mb-3">
+                            <div class="d-flex align-items-center justify-content-center bg-primary ml-n4" style="width: 80px; height: 80px;">
+                                <i class="fa fa-2x fa-pump-soap text-secondary"></i>
+                            </div>
+                            <h1 class="display-2 text-white mt-n2 m-0">06</h1>
+                        </div>
+                        <h4 class="text-uppercase mb-3">Республика боюнча жеткирүү</h4>
+                        <p class="m-0">Биздин Баткен, Нарын, Бишкек жана башка шаарлардагы пункттарыбыз менен сиз каалаган аймакка мини-лабону өз каалооңуз боюнча жеткире алабыз.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- Services End -->
 <!-- Contact Start -->
+
+
+
 <div class="container-fluid py-5">
     <div class="container pt-5 pb-3">
         <h1 class="display-1 text-primary text-center"></h1>
