--- a/src/main/resources/templates/swagger.html
+++ b/src/main/resources/templates/swagger.html
@@ -7,7 +7,7 @@
     <style>
         html {
             box-sizing: border-box;
-            overflow: -moz-scrollbars-vertical;
+            /*overflow: -moz-scrollbars-vertical;*/
             overflow-y: scroll;
         }
         *,
