changed russian to kyrgyz

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -146,11 +146,11 @@
 
 <!-- Page Header Start -->
 <div class="container-fluid page-header">
-    <h1 class="display-3 text-uppercase text-white mb-3">About</h1>
+    <h1 class="display-3 text-uppercase text-white mb-3">Маалымат</h1>
     <div class="d-inline-flex text-white">
-        <h6 class="text-uppercase m-0"><a class="text-white" href="">Home</a></h6>
+        <h6 class="text-uppercase m-0"><a class="text-white" href="">Башкы бет</a></h6>
         <h6 class="text-body m-0 px-3">/</h6>
-        <h6 class="text-uppercase text-body m-0">About</h6>
+        <h6 class="text-uppercase text-body m-0">Маалымат</h6>
     </div>
 </div>
 <!-- Page Header Start -->
