--- a/src/main/resources/templates/jelmayan.html
+++ b/src/main/resources/templates/jelmayan.html
@@ -68,7 +68,7 @@
                     <a href="/pages/home" class="nav-item nav-link">Башкы бет</a>
                     <a href="/pages/about" class="nav-item nav-link">Маалымат</a>
                     <a href="/pages/jelmayan" class="nav-item nav-link">Jelmayan</a>
-                    <a href="/pages/contact" class="nav-item nav-link">Contact</a>
+                    <a href="/pages/contact" class="nav-item nav-link">Контакт</a>
                 </div>
             </div>
         </nav>
