--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -77,11 +77,11 @@
 
 <!-- Page Header Start -->
 <div class="container-fluid page-header">
-    <h1 class="display-3 text-uppercase text-white mb-3">Contact</h1>
+    <h1 class="display-3 text-uppercase text-white mb-3">Контакт</h1>
     <div class="d-inline-flex text-white">
-        <h6 class="text-uppercase m-0"><a class="text-white" href="">Home</a></h6>
+        <h6 class="text-uppercase m-0"><a class="text-white" href="">Башкы бет</a></h6>
         <h6 class="text-body m-0 px-3">/</h6>
-        <h6 class="text-uppercase text-body m-0">Contact</h6>
+        <h6 class="text-uppercase text-body m-0">Контакт</h6>
     </div>
 </div>
 <!-- Page Header Start -->
@@ -90,7 +90,7 @@
 <!-- Contact Start -->
 <div class="container-fluid py-5">
     <div class="container pt-5 pb-3">
-        <h1 class="display-4 text-uppercase text-center mb-5">Contact Us</h1>
+        <h1 class="display-4 text-uppercase text-center mb-5"></h1>
         <div class="row">
             <div class="col-lg-7 mb-2">
                 <div class="contact-form bg-light mb-4" style="padding: 30px;margin-top:100px;">
